# Jarvis

./: .gitignore  HEARTBEAT.md  LICENSE  NOTICE  README.md  install.sh  pyproject.toml
Friday-mac/: FridayApp.swift  FridayClient.swift  MenuBarContent.swift  README.md  SettingsView.swift
Friday-mac/Friday/Friday/: ContentView.swift  FridayApp.swift
Friday-mac/Friday/Friday.xcodeproj/: project.pbxproj
Friday-mac/Friday/FridayTests/: FridayTests.swift
Friday-mac/Friday/FridayUITests/: FridayUITests.swift  FridayUITestsLaunchTests.swift
Idea/: FRIDAY_IDEA.md  FRIDAY_OURA_API.md  FRIDAY_SKILLSET.md  FRIDAY_SYSTEM_MAP.md  FRIDAY_SYSTEM_PROMPT.md  FRIDAY_TOOLS.md  friday_orb.html
docs/: agents.md  app-spec.md  friday-glasses-integration.md  gesture-control.md  improvement-mode.md  llm-providers.md  ollama-setup.md  post.md  progress.md  setup-voice.md  sms-setup.md  telegram.md  user-config.md  user.example.json  voice-pipeline.md  whatsapp-setup.md
friday/: cli.py
friday/agents/: briefing_agent.py  code_agent.py  comms_agent.py  deep_research_agent.py  household_agent.py  job_agent.py  memory_agent.py  monitor_agent.py  research_agent.py  social_agent.py  system_agent.py
friday/background/: cron_scheduler.py  github_sync.py  heartbeat.py  memory_processor.py  monitor_scheduler.py
friday/core/: base_agent.py  briefing.py  config.py  fast_path.py  llm.py  onboarding.py  oneshot.py  oneshot_runner.py  orchestrator.py  prompts.py  router.py  setup_wizard.py  tool_dispatch.py  types.py  user_config.py
friday/data/: cv.py  google_client.json
friday/memory/: conversation_log.py  store.py
friday/skills/: creator.py  embedder.py  loader.py  selector.py
friday/skills/adaptive_reasoning/: SKILL.md
friday/skills/browser_use/: SKILL.md
friday/skills/code_workflow/: SKILL.md
friday/skills/firecrawl/: SKILL.md
friday/skills/frontend_design/: SKILL.md  template_landing.html
friday/skills/humanize_text/: SKILL.md
friday/skills/image_tools/: SKILL.md
friday/skills/job_analysis/: SKILL.md
friday/skills/marketing_strategy/: SKILL.md
friday/skills/memory_first/: SKILL.md
friday/skills/pdf_toolkit/: SKILL.md
friday/skills/powerpoint/: SKILL.md
friday/skills/proactive_execution/: SKILL.md
friday/skills/self_improving/: SKILL.md
friday/skills/web_research/: SKILL.md
friday/skills/youtube_watcher/: SKILL.md
friday/sms/: __init__.py  server.py
friday/telegram/: __init__.py  bot.py
friday/tools/: briefing_tools.py  browser_tools.py  calendar_tools.py  call_tools.py  cron_tools.py  cv_tools.py  email_tools.py  file_tools.py  firecrawl_client.py  github_tools.py  google_auth.py  imessage_tools.py  mac_tools.py  memory_tools.py  monitor_tools.py  notify.py  pdf_tools.py  screen_tools.py  screencast_tools.py  sms_tools.py  telegram_tools.py  terminal_tools.py  tv_tools.py  voice_tools.py  watch_tools.py  web_tools.py  whatsapp_tools.py  x_tools.py
friday/vision/: __init__.py  gesture_commands.py  gesture_daemon.py  gesture_engine.py  gesture_listener.py
friday/voice/: __init__.py  cloud_stt.py  config.py  pipeline.py  response_filter.py  stt.py  tts.py  vad.py  wake_word.py
friday/whatsapp/: package-lock.json  package.json  server.js
tests/: test_3way_fair.py  test_full_benchmark.py  test_gemma_vs_qwen.py  test_production_benchmark.py  test_streaming_and_vision.py  test_top3_providers.py
