[project]
name = "friday-os"
version = "0.4.0"
description = "FRIDAY — Personal AI Operating System. Local + cloud inference, persistent memory, agent routing, voice, gestures. Per-user config at ~/Friday/user.json."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Angelo Asante", email = "angeloasante958@gmail.com" },
]
keywords = ["ai", "assistant", "agent", "friday", "jarvis", "personal-ai", "llm", "voice", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "apscheduler>=3.11.2",
    "chromadb>=1.5.5",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "playwright>=1.58.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "pywebostv>=0.8.9",
    "rich>=14.3.3",
    "tavily-python>=0.7.23",
    "wakeonlan>=3.1.0",
    "weasyprint>=63.0",
    "jinja2>=3.1.6",
    "pypdf>=6.9.1",
    "pdfplumber>=0.11.9",
    "tweepy>=4.16.0",
    "sounddevice>=0.5.1",
    "numpy>=1.26.0",
    "mlx-whisper>=0.4.0",
    "kokoro-onnx>=0.4.0",
    "onnxruntime>=1.19.0",
    "openai>=2.29.0",
    "websockets>=16.0",
    "selenium>=4.41.0",
    "python-docx>=1.2.0",
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "twilio>=9.10.4",
    "pyobjc-framework-quartz>=10.0",
    "fal-client>=0.13.2",
    "ddgs>=9.14.1",
]

[project.scripts]
friday = "friday.cli:run"

[project.urls]
Homepage   = "https://github.com/angeloasante/Jarvis"
Repository = "https://github.com/angeloasante/Jarvis"
Issues     = "https://github.com/angeloasante/Jarvis/issues"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["friday*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
# Ship the example configs and any bundled skills/assets so pip-installed
# users have everything they need on first run.
"friday" = ["skills/**/*", "data/**/*.json"]
